<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP140_Manual" Id="{e2446ecd-4d28-4c37-8786-2223f053255e}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP140_Manual
VAR
	OP140_Enable:BOOL;
	temp : BOOL;
	temp1: BOOL;
	temp3: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Bottom Cylinder 1
OP140_GVL.CR140_Horz_Cyl_1_Status:=0;
// Safe Home
IF CR140_Vert_Cyl_1.position1 THEN 
	CR140_Horz_Cyl_1.SafeHome:= TRUE;
	ELSE
		CR140_Horz_Cyl_1.SafeHome:= FALSE;
	END_IF
	//Safe Work
IF CR140_Vert_Cyl_1.position1 THEN 
CR140_Horz_Cyl_1.SafeWork:=TRUE;
ELSE
	CR140_Horz_Cyl_1.SafeWork:=FALSE;
	END_IF
//Manual PB 1
IF(OP140_HMI_Horz_Cyl1_Home_PB) THEN
	CR140_Horz_Cyl_1.ManualPB1:=TRUE;
	ELSE
		CR140_Horz_Cyl_1.ManualPB1:=FALSE;
	END_IF
//Manual PB2 
IF(OP140_HMI_Horz_Cyl1_Work_PB) THEN
	CR140_Horz_Cyl_1.ManualPB2:=TRUE;
	ELSE
		CR140_Horz_Cyl_1.ManualPB2:=FALSE;
	END_IF	

	

CR140_Horz_Cyl_1(
	Auto:=OP140_AutoSelected , 
	Manual:=OP140_ManualSelected , 
	ErrorActive:=OP140_ErrorActive , 
	ResetPB:=OP140_HMI_Reset , 
	Sensor1:=I140_HORZ_SUP1_CYL_REVI1301_0  , 
	Sensor2:=I140_HORZ_SUP1_CYL_FWDI1301_1  , 
	ManualPB1:= , 
	ManualPB2:= , 
	AutoCmd1:= , 
	AutoCmd2:= , 
	OperationEnable:=OperationEnable , 
	SafeHome:= , 
	SafeWork:= , 
	HomingCmd1:= , 
	Pulse_1Sec:=Pulse_Block.Q1Hz , 
	BlinkingBit:= , 
	TimeOut1:=10 , 
	TimeOut2:=10 , 
	TimeOut3:=10 , 
	Solenoid1=>O140_HORZ_SUP1_CYL_REV_Q1341_0 , 
	Solenoid2=>O140_HORZ_SUP1_CYL_FWD_Q1341_1 , 
	AlarmSensor1=>berror[1301] , 
	AlarmSensor2=>berror[1302] , 
	AlarmSolenoid1=>berror[1303] , 
	AlarmSolenoid2=> berror[1304], 
	AllSignal=>berror[1305] , 
	AlarmPresent=> , 
	Position1=> , 
	Position2=> , 
	HomeSensorBlink=> , 
	WorkSensorBlink=> , 
	Status:=OP140_GVL.CR140_Horz_Cyl_1_Status );
	
	
	//Bottom Cylinder 2
OP140_GVL.CR140_Horz_Cyl_2_Status:=0;
// Safe Home
IF CR140_Vert_Cyl_2.position1 THEN 
	CR140_Horz_Cyl_2.SafeHome:= TRUE;
	ELSE
		CR140_Horz_Cyl_2.SafeHome:= FALSE;
	END_IF
	//Safe Work
IF CR140_Vert_Cyl_2.position1 THEN 
CR140_Horz_Cyl_2.SafeWork:=TRUE;
ELSE
	CR140_Horz_Cyl_2.SafeWork:=FALSE;
	END_IF
//Manual PB 1
IF(OP140_HMI_Horz_Cyl2_Home_PB) THEN
	CR140_Horz_Cyl_2.ManualPB1:=TRUE;
	ELSE
		CR140_Horz_Cyl_2.ManualPB1:=FALSE;
	END_IF
//Manual PB2 
IF(OP140_HMI_Horz_Cyl2_Work_PB) THEN
	CR140_Horz_Cyl_2.ManualPB2:=TRUE;
	ELSE
		CR140_Horz_Cyl_2.ManualPB2:=FALSE;
	END_IF	

	

CR140_Horz_Cyl_2(
	Auto:= OP140_AutoSelected, 
	Manual:=OP140_ManualSelected , 
	ErrorActive:=OP140_ErrorActive , 
	ResetPB:=OP140_HMI_Reset  , 
	Sensor1:=I140_HORZ_SUP2_CYL_REVI1310_0  , 
	Sensor2:=I140_HORZ_SUP2_CYL_FWDI1310_1  , 
	ManualPB1:= , 
	ManualPB2:= , 
	AutoCmd1:= , 
	AutoCmd2:= , 
	OperationEnable:= OperationEnable, 
	SafeHome:= , 
	SafeWork:= , 
	HomingCmd1:= , 
	Pulse_1Sec:=Pulse_Block.Q1Hz , 
	BlinkingBit:= , 
	TimeOut1:=10 , 
	TimeOut2:=10 , 
	TimeOut3:=10 , 
	Solenoid1=>O140_HORZ_SUP2_CYL_REV_Q1342_0 , 
	Solenoid2=>O140_HORZ_SUP2_CYL_FWD_Q1342_1  , 
	AlarmSensor1=>berror[1316] , 
	AlarmSensor2=>berror[1317] , 
	AlarmSolenoid1=>berror[1318] , 
	AlarmSolenoid2=>berror[1319] , 
	AllSignal=>berror[1320] , 
	AlarmPresent=> , 
	Position1=> , 
	Position2=> , 
	HomeSensorBlink=> , 
	WorkSensorBlink=> , 
	Status:=OP140_GVL.CR140_Horz_Cyl_2_Status);
	
	
	//Bottom Cylinder 3
OP140_GVL.CR140_Horz_Cyl_3_Status:=0;
// Safe Home
IF CR140_Vert_Cyl_3.position1 THEN 
	CR140_Horz_Cyl_3.SafeHome:= TRUE;
	ELSE
		CR140_Horz_Cyl_3.SafeHome:= FALSE;
	END_IF
	//Safe Work
IF CR140_Vert_Cyl_3.position1 THEN 
CR140_Horz_Cyl_3.SafeWork:=TRUE;
ELSE
	CR140_Horz_Cyl_3.SafeWork:=FALSE;
	END_IF
//Manual PB 1
IF(OP140_HMI_Horz_Cyl3_Home_PB) THEN
	CR140_Horz_Cyl_3.ManualPB1:=TRUE;
	ELSE
		CR140_Horz_Cyl_3.ManualPB1:=FALSE;
	END_IF
//Manual PB2 
IF(OP140_HMI_Horz_Cyl3_Work_PB) THEN
	CR140_Horz_Cyl_3.ManualPB2:=TRUE;
	ELSE
		CR140_Horz_Cyl_3.ManualPB2:=FALSE;
	END_IF	

	

CR140_Horz_Cyl_3(
	Auto:=OP140_AutoSelected , 
	Manual:=OP140_ManualSelected , 
	ErrorActive:=OP140_ErrorActive , 
	ResetPB:=OP140_HMI_Reset , 
	Sensor1:=I140_HORZ_SUP3_CYL_REVI1310_6  , 
	Sensor2:=I140_HORZ_SUP3_CYL_FWDI1310_7  , 
	ManualPB1:= , 
	ManualPB2:= , 
	AutoCmd1:= , 
	AutoCmd2:= , 
	OperationEnable:=OperationEnable , 
	SafeHome:= , 
	SafeWork:= , 
	HomingCmd1:= , 
	Pulse_1Sec:=Pulse_Block.Q1Hz , 
	BlinkingBit:= , 
	TimeOut1:=10 , 
	TimeOut2:=10 , 
	TimeOut3:=10 , 
	Solenoid1=>O140_HORZ_SUP3_CYL_REV_Q1343_0 , 
	Solenoid2=>O140_HORZ_SUP3_CYL_FWD_Q1343_1  , 
	AlarmSensor1=>berror[1331] , 
	AlarmSensor2=>berror[1332] , 
	AlarmSolenoid1=>berror[1333] , 
	AlarmSolenoid2=>berror[1334] , 
	AllSignal=>berror[1335] , 
	AlarmPresent=> , 
	Position1=> , 
	Position2=> , 
	HomeSensorBlink=> , 
	WorkSensorBlink=> , 
	Status:=OP140_GVL.CR140_Horz_Cyl_1_Status );
	
	
	//Vertical Cylinder 1
OP140_Gvl.CR140_Vert_Cyl_1_Status:=0;
// Safe Home
IF (SR140_HMI_Vert_Servo_MC1.actualPosition<=50) THEN 
	CR140_Vert_Cyl_1.SafeHome:= TRUE;
	ELSE
		CR140_Vert_Cyl_1.SafeHome:= FALSE;
	END_IF
	//Safe Work
IF(TRUE) THEN 
CR140_Vert_Cyl_1.SafeWork:=TRUE;
ELSE
	CR140_Vert_Cyl_1.SafeWork:=FALSE;
	END_IF
//Manual PB 1
IF(OP140_HMI_Vert_Cyl1_Home_PB) THEN
	CR140_Vert_Cyl_1.ManualPB1:=TRUE;
	ELSE
		CR140_Vert_Cyl_1.ManualPB1:=FALSE;
	END_IF
//Manual PB2 
IF(OP140_HMI_Vert_Cyl1_Work_PB) THEN
	CR140_Vert_Cyl_1.ManualPB2:=TRUE;
	ELSE
		CR140_Vert_Cyl_1.ManualPB2:=FALSE;
	END_IF	

	

CR140_Vert_Cyl_1(
	Auto:=OP140_AutoSelected , 
	Manual:=OP140_ManualSelected , 
	ErrorActive:=OP140_ErrorActive , 
	ResetPB:=OP140_HMI_Reset , 
	Sensor1:=I140_VERT_SUP1_CYL_REVI1301_2  , 
	Sensor2:=I140_VERT_SUP1_CYL_FWDI1301_3  , 
	ManualPB1:= , 
	ManualPB2:= , 
	AutoCmd1:= , 
	AutoCmd2:= , 
	OperationEnable:=OperationEnable , 
	SafeHome:= , 
	SafeWork:= , 
	HomingCmd1:= , 
	Pulse_1Sec:=Pulse_Block.Q1Hz  , 
	BlinkingBit:= , 
	TimeOut1:=10 , 
	TimeOut2:=10 , 
	TimeOut3:=10 , 
	Solenoid1=>O140_VERT_SUP1_CYL_REV_Q1341_2  , 
	Solenoid2=>O140_VERT_SUP1_CYL_FWD_Q1341_3 , 
	AlarmSensor1=> berror[1306], 
	AlarmSensor2=>berror[1307] , 
	AlarmSolenoid1=>berror[1308] , 
	AlarmSolenoid2=>berror[1309] , 
	AllSignal=>berror[1310],
	AlarmPresent=> , 
	Position1=> , 
	Position2=> , 
	HomeSensorBlink=> , 
	WorkSensorBlink=> , 
	Status:=OP140_Gvl.CR140_Vert_Cyl_1_Status );
	
		//Vertical Cylinder 2
CR140_Vert_Cyl_2_Status:=0;
// Safe Home
IF (SR140_HMI_Vert_Servo_MC2.actualPosition<=50) THEN 
	CR140_Vert_Cyl_2.SafeHome:= TRUE;
	ELSE
		CR140_Vert_Cyl_2.SafeHome:= FALSE;
	END_IF
	//Safe Work
IF(TRUE) THEN 
CR140_Vert_Cyl_2.SafeWork:=TRUE;
ELSE
	CR140_Vert_Cyl_2.SafeWork:=FALSE;
	END_IF
//Manual PB 1
IF(OP140_HMI_Vert_Cyl2_Home_PB) THEN
	CR140_Vert_Cyl_2.ManualPB1:=TRUE;
	ELSE
		CR140_Vert_Cyl_2.ManualPB1:=FALSE;
	END_IF
//Manual PB2 
IF(OP140_HMI_Vert_Cyl2_Work_PB) THEN
	CR140_Vert_Cyl_2.ManualPB2:=TRUE;
	ELSE
		CR140_Vert_Cyl_2.ManualPB2:=FALSE;
	END_IF	

	

CR140_Vert_Cyl_2(
	Auto:=OP140_AutoSelected , 
	Manual:=OP140_ManualSelected , 
	ErrorActive:=OP140_ErrorActive , 
	ResetPB:=OP140_HMI_Reset , 
	Sensor1:=I140_VERT_SUP2_CYL_REVI1310_2 , 
	Sensor2:=I140_VERT_SUP2_CYL_FWDI1310_3 , 
	ManualPB1:= , 
	ManualPB2:= , 
	AutoCmd1:= , 
	AutoCmd2:= , 
	OperationEnable:=OperationEnable , 
	SafeHome:= , 
	SafeWork:= , 
	HomingCmd1:= , 
	Pulse_1Sec:=Pulse_Block.Q1Hz , 
	BlinkingBit:= , 
	TimeOut1:=10 , 
	TimeOut2:=10 , 
	TimeOut3:=10 , 
	Solenoid1=>O140_VERT_SUP2_CYL_REV_Q1342_2 , 
	Solenoid2=>O140_VERT_SUP2_CYL_FWD_Q1342_3  , 
	AlarmSensor1=>berror[1321] , 
	AlarmSensor2=>berror[1322] , 
	AlarmSolenoid1=>berror[1323] , 
	AlarmSolenoid2=>berror[1324] , 
	AllSignal=>berror[1325] , 
	AlarmPresent=> , 
	Position1=> , 
	Position2=> , 
	HomeSensorBlink=> , 
	WorkSensorBlink=> , 
	Status:=CR140_Vert_Cyl_2_Status );
	
		//Vertical Cylinder 3
CR140_Vert_Cyl_3_Status:=0;
// Safe Home
IF (SR140_HMI_Vert_Servo_MC3.actualPosition<=50) THEN 
	CR140_Vert_Cyl_3.SafeHome:= TRUE;
	ELSE
		CR140_Vert_Cyl_3.SafeHome:= FALSE;
	END_IF
	//Safe Work
IF(TRUE) THEN 
   CR140_Vert_Cyl_3.SafeWork:=TRUE;
ELSE
	CR140_Vert_Cyl_3.SafeWork:=FALSE;
END_IF
//Manual PB 1
IF(OP140_HMI_Vert_Cyl3_Home_PB) THEN
	CR140_Vert_Cyl_3.ManualPB1:=TRUE;
	ELSE
		CR140_Vert_Cyl_3.ManualPB1:=FALSE;
	END_IF
//Manual PB2 
IF(OP140_HMI_Vert_Cyl3_Work_PB) THEN
	CR140_Vert_Cyl_3.ManualPB2:=TRUE;
	ELSE
		CR140_Vert_Cyl_3.ManualPB2:=FALSE;
	END_IF	

	

CR140_Vert_Cyl_3(
	Auto:=OP140_AutoSelected , 
	Manual:=OP140_ManualSelected , 
	ErrorActive:=OP140_ErrorActive , 
	ResetPB:=OP140_HMI_Reset , 
	Sensor1:=I140_VERT_SUP3_CYL_REVI1311_0 , 
	Sensor2:=I140_VERT_SUP3_CYL_FWDI1311_1  , 
	ManualPB1:= , 
	ManualPB2:= , 
	AutoCmd1:= , 
	AutoCmd2:= , 
	OperationEnable:= OperationEnable, 
	SafeHome:= , 
	SafeWork:= , 
	HomingCmd1:= , 
	Pulse_1Sec:=Pulse_Block.Q1Hz , 
	BlinkingBit:= , 
	TimeOut1:=10 , 
	TimeOut2:=10 , 
	TimeOut3:=10 , 
	Solenoid1=>O140_VERT_SUP3_CYL_REV_Q1343_2 , 
	Solenoid2=>O140_VERT_SUP3_CYL_FWD_Q1343_3  , 
	AlarmSensor1=>berror[1336] , 
	AlarmSensor2=>berror[1337] , 
	AlarmSolenoid1=>berror[1338] , 
	AlarmSolenoid2=>berror[1339] , 
	AllSignal=>berror[1340] , 
	AlarmPresent=> , 
	Position1=> , 
	Position2=> , 
	HomeSensorBlink=> , 
	WorkSensorBlink=> , 
	Status:=CR140_Vert_Cyl_3_Status );
	
		//Top Wipe Cylinder 
CR140_Wipe_Cyl_1_Status:=0;
// Safe Home
IF (TRUE) THEN 
	CR140_Top_Wipe_Cyl_1.SafeHome:= TRUE;
	ELSE
		CR140_Top_Wipe_Cyl_1.SafeHome:= FALSE;
	END_IF
	//Safe Work
IF(SR140_Vert_Servo_Ctrl_1.Axis_In_Home) THEN 
CR140_Top_Wipe_Cyl_1.SafeWork:=TRUE;
ELSE
	CR140_Top_Wipe_Cyl_1.SafeWork:=FALSE;
	END_IF
//Manual PB 1
IF(OP140_HMI_Wipe_Cyl1_Home_PB) THEN
	CR140_Top_Wipe_Cyl_1.ManualPB1:=TRUE;
	ELSE
		CR140_Top_Wipe_Cyl_1.ManualPB1:=FALSE;
	END_IF
//Manual PB2 
IF(OP140_HMI_Wipe_Cyl1_Work_PB) THEN
	CR140_Top_Wipe_Cyl_1.ManualPB2:=TRUE;
	ELSE
		CR140_Top_Wipe_Cyl_1.ManualPB2:=FALSE;
	END_IF	

	

CR140_Top_Wipe_Cyl_1(
	Auto:=OP140_AutoSelected , 
	Manual:=OP140_ManualSelected, 
	ErrorActive:=OP140_ErrorActive , 
	ResetPB:=OP140_HMI_Reset , 
	Sensor1:=I140_WIPE1_CYL_REVI1301_4, 
	Sensor2:=I140_WIPE1_CYL_FWDI1301_5 , 
	ManualPB1:= , 
	ManualPB2:= , 
	AutoCmd1:= , 
	AutoCmd2:= , 
	OperationEnable:=OperationEnable , 
	SafeHome:= , 
	SafeWork:= , 
	HomingCmd1:= , 
	Pulse_1Sec:=Pulse_Block.Q1Hz , 
	BlinkingBit:= , 
	TimeOut1:=10 , 
	TimeOut2:=10 , 
	TimeOut3:=10 , 
	Solenoid1=>O140_WIPE1_CYL_REV_Q1341_6 , 
	Solenoid2=>O140_WIPE1_CYL_FWD_Q1341_7  , 
	AlarmSensor1=>berror[1311] , 
	AlarmSensor2=>berror[1312] , 
	AlarmSolenoid1=>berror[1313] , 
	AlarmSolenoid2=>berror[1314] , 
	AllSignal=>berror[1315] , 
	AlarmPresent=> , 
	Position1=> , 
	Position2=> , 
	HomeSensorBlink=> , 
	WorkSensorBlink=> , 
	Status:=CR140_Wipe_Cyl_1_Status );
	
	//Top Wipe Cyl 2
	CR140_Wipe_Cyl_2_Status:=0;
// Safe Home
IF (TRUE) THEN 
	CR140_Top_Wipe_Cyl_2.SafeHome:= TRUE;
	ELSE
		CR140_Top_Wipe_Cyl_2.SafeHome:= FALSE;
	END_IF
	//Safe Work
IF(SR140_Vert_Servo_Ctrl_2.Axis_In_Home) THEN 
CR140_Top_Wipe_Cyl_2.SafeWork:=TRUE;
ELSE
	CR140_Top_Wipe_Cyl_2.SafeWork:=FALSE;
	END_IF
//Manual PB 1
IF(OP140_HMI_Wipe_Cyl2_Home_PB) THEN
	CR140_Top_Wipe_Cyl_2.ManualPB1:=TRUE;
	ELSE
		CR140_Top_Wipe_Cyl_2.ManualPB1:=FALSE;
	END_IF
//Manual PB2 
IF(OP140_HMI_Wipe_Cyl2_Work_PB) THEN
	CR140_Top_Wipe_Cyl_2.ManualPB2:=TRUE;
	ELSE
		CR140_Top_Wipe_Cyl_2.ManualPB2:=FALSE;
	END_IF	

	

CR140_Top_Wipe_Cyl_2(
	Auto:=OP140_AutoSelected , 
	Manual:=OP140_ManualSelected , 
	ErrorActive:=OP140_ErrorActive , 
	ResetPB:=OP140_HMI_Reset , 
	Sensor1:=I140_WIPE2_CYL_REVI1310_4 , 
	Sensor2:=I140_WIPE2_CYL_FWDI1310_5  , 
	ManualPB1:= , 
	ManualPB2:= , 
	AutoCmd1:= , 
	AutoCmd2:= , 
	OperationEnable:=OperationEnable , 
	SafeHome:= , 
	SafeWork:= , 
	HomingCmd1:= , 
	Pulse_1Sec:=Pulse_Block.Q1Hz , 
	BlinkingBit:= , 
	TimeOut1:=10 , 
	TimeOut2:=10 , 
	TimeOut3:=10 , 
	Solenoid1=>O140_WIPE2_CYL_REV_Q1342_6  , 
	Solenoid2=>O140_WIPE2_CYL_FWD_Q1342_7 , 
	AlarmSensor1=>berror[1326] , 
	AlarmSensor2=>berror[1327] , 
	AlarmSolenoid1=>berror[1328] , 
	AlarmSolenoid2=>berror[1329] , 
	AllSignal=>berror[1330] , 
	AlarmPresent=> , 
	Position1=> , 
	Position2=> , 
	HomeSensorBlink=> , 
	WorkSensorBlink=> , 
	Status:=CR140_Wipe_Cyl_2_Status );
	
//Wipe Cylinder 3

CR140_Wipe_Cyl_3_Status:=0;
// Safe Home
IF (TRUE) THEN 
	CR140_Top_Wipe_Cyl_3.SafeHome:= TRUE;
	ELSE
		CR140_Top_Wipe_Cyl_3.SafeHome:= FALSE;
	END_IF
	//Safe Work
IF(SR140_Vert_Servo_Ctrl_3.Axis_In_Home) THEN 
CR140_Top_Wipe_Cyl_3.SafeWork:=TRUE;
ELSE
	CR140_Top_Wipe_Cyl_3.SafeWork:=FALSE;
	END_IF
//Manual PB 1
IF(OP140_HMI_Wipe_Cyl3_Home_PB) THEN
	CR140_Top_Wipe_Cyl_3.ManualPB1:=TRUE;
	ELSE
		CR140_Top_Wipe_Cyl_3.ManualPB1:=FALSE;
	END_IF
//Manual PB2 
IF(OP140_HMI_Wipe_Cyl3_Work_PB) THEN
	CR140_Top_Wipe_Cyl_3.ManualPB2:=TRUE;
	ELSE
		CR140_Top_Wipe_Cyl_3.ManualPB2:=FALSE;
	END_IF	

	

CR140_Top_Wipe_Cyl_3(
	Auto:=OP140_AutoSelected , 
	Manual:=OP140_ManualSelected , 
	ErrorActive:=OP140_ErrorActive , 
	ResetPB:=OP140_HMI_Reset , 
	Sensor1:=I140_WIPE3_CYL_REVI1311_2 , 
	Sensor2:=I140_WIPE3_CYL_FWDI1311_3  , 
	ManualPB1:= , 
	ManualPB2:= , 
	AutoCmd1:= , 
	AutoCmd2:= , 
	OperationEnable:=OperationEnable , 
	SafeHome:= , 
	SafeWork:= , 
	HomingCmd1:= , 
	Pulse_1Sec:= Pulse_Block.Q1Hz, 
	BlinkingBit:= , 
	TimeOut1:=10 , 
	TimeOut2:=10 , 
	TimeOut3:= 10, 
	Solenoid1=>O140_WIPE3_CYL_REV_Q1343_6 , 
	Solenoid2=>O140_WIPE3_CYL_FWD_Q1343_7  , 
	AlarmSensor1=>berror[1341] , 
	AlarmSensor2=>berror[1342] , 
	AlarmSolenoid1=>berror[1343] , 
	AlarmSolenoid2=>berror[1344] , 
	AllSignal=>berror[1345] , 
	AlarmPresent=> , 
	Position1=> , 
	Position2=> , 
	HomeSensorBlink=> , 
	WorkSensorBlink=> , 
	Status:=CR140_Wipe_Cyl_3_Status );
		
	
	//Vertical Servo 1
	
	// Safe to Move
	
	IF CR140_Top_Wipe_Cyl_1.Position1	AND CR140_Horz_Cyl_1.Sensor2  AND CR140_Vert_Cyl_1.Position2 THEN //OR SR140_HMI_Vert_Servo_MC1.actualPosition <=50)	THEN
		
		OP140_Servo1_Safety:=TRUE;
		ELSE
			OP140_Servo1_Safety:=FALSE;
		END_IF

		//LH Vertical Servo 1
SR140_Vert_Servo_1(
	bAxis1_Ref_Switch:= , 
	bInit:= , 
	bErrorReset:=OP140_HMI_Reset OR Servo_Reset, 
	bEnable:= Servo_Enable, 
	bMoveVelocity:= , 
	bHalt:= , 
	bManualMode:=OP140_ManualSelected , 
	fHomePos:= , 
	fOverride:=100 , 
	fTargetPosition:=SR140_Vert_Servo_Ctrl_1.Position , 
	fTargetVelocity:=SR140_Vert_Servo_Ctrl_1.Velocity , 
	fAcc:= , 
	fDec:= ,
	Servo_High_Limit:= SR140_Vert_Servo_Max_Lim,	
	Servo_Low_Limit:=SR140_Vert_Servo_Min_Lim,	 	
	WARNING_LIMIT:=1,
	Safe_move_Conditions:=OP140_Servo1_Safety , 
	Axis:= SR140_Vert_Servo_Axis_1, 
	HME_WRITE_ADD:= 16#5016,	
	bHome:=SR140_Vert_Servo_Ctrl_1.Reference_Start, 
	bSetPosition:=SR140_Vert_Servo_Ctrl_1.BsetPos , 
	bMoveAbsolute:=SR140_Vert_Servo_Ctrl_1.ABSmove_Start , 
	bMoveRelative:=SR140_Vert_Servo_Ctrl_1.RELmove_Start , 
	bMoveTorque:=SR140_Vert_Servo_Ctrl_1.Torque_mode_Start , 
	stManualModeAxis:=SR140_HMI_Vert_Servo_MC1 , 
	bmove_home:=SR140_Vert_Servo_Ctrl_1.Axis_Home_Cmd , 
	sAxisState=>SR140_Vert_Servo_Ctrl_1.Axis_State , 
	bAxis_ready=>SR140_Vert_Servo_Ctrl_1.Axis_ready , 
	bAxisInPosition=>SR140_Vert_Servo_Ctrl_1.Axis_In_Pos , 
	bAxisError=>berror[1350] , 
	bAxisEnabled=>SR140_Vert_Servo_Ctrl_1.Axis_Enabled, 
	bAxisHomed=>SR140_Vert_Servo_Ctrl_1.Axis_reference  , 
	bSetPositionDone=> , 
	bHaltDone=> SR140_Vert_Servo_Ctrl_1.Axis_Halted, 
	bSTOPDone=> SR140_Vert_Servo_Ctrl_1.Axis_Stopped, 
	bHomeDone=> , 
	bDone=> , 
	bTorqueReached=>SR140_Vert_Servo_Ctrl_1.Trq_reached , 
	bsafe_to_move=>SR140_Vert_Servo_Ctrl_1.Safe_To_Move , 
	baxis_in_home_pos=>SR140_Vert_Servo_Ctrl_1.Axis_In_Home , 
	bABS_Pos_done=>, 
	Actual_position=> SR140_Vert_Servo_Ctrl_1.Actual_Position, 
	Actual_velocity=> SR140_Vert_Servo_Ctrl_1.Actual_Velocity, 
	Actual_Torque=>SR140_Vert_Servo_Ctrl_1.Actual_Torque );
	
	//Vertical Servo 2
	
	// Safe to Move
	
	IF CR140_Top_Wipe_Cyl_2.Position1 AND CR140_Horz_Cyl_2.Position2 AND CR140_Vert_Cyl_2.Position2 THEN //OR SR140_HMI_Vert_Servo_MC2.actualPosition <=50)	THEN
		
		OP140_Servo2_Safety:=TRUE;
		ELSE
			OP140_Servo2_Safety:=FALSE;
		END_IF

SR140_Vert_Servo_2(
	bAxis1_Ref_Switch:= , 
	bInit:= , 
	bErrorReset:=OP140_HMI_Reset OR Servo_Reset, 
	bEnable:= Servo_Enable, 
	bMoveVelocity:= , 
	bHalt:= , 
	bManualMode:=OP140_ManualSelected , 
	fHomePos:= , 
	fOverride:=100 , 
	fTargetPosition:= sr140_vert_servo_ctrl_2.Position, 
	fTargetVelocity:=sr140_vert_servo_ctrl_2.Velocity , 
	fAcc:= , 
	fDec:= ,
	Servo_High_Limit:= SR140_Vert_Servo_Max_Lim,	
	Servo_Low_Limit:=SR140_Vert_Servo_Min_Lim,	 	
	WARNING_LIMIT:=1, 
	Safe_move_Conditions:=OP140_Servo2_Safety OR temp, 
	Axis:= SR140_Vert_Servo_Axis_2, 
	HME_WRITE_ADD:= 16#5014,	
	bHome:=SR140_Vert_Servo_Ctrl_2.Reference_Start, 
	bSetPosition:=SR140_Vert_Servo_Ctrl_2.BsetPos , 
	bMoveAbsolute:=SR140_Vert_Servo_Ctrl_2.ABSmove_Start , 
	bMoveRelative:=SR140_Vert_Servo_Ctrl_2.RELmove_Start , 
	bMoveTorque:=SR140_Vert_Servo_Ctrl_2.Torque_mode_Start , 
	stManualModeAxis:=SR140_HMI_Vert_Servo_MC2 , 
	bmove_home:=SR140_Vert_Servo_Ctrl_2.Axis_Home_Cmd , 
	sAxisState=>SR140_Vert_Servo_Ctrl_2.Axis_State , 
	bAxis_ready=>SR140_Vert_Servo_Ctrl_2.Axis_ready , 
	bAxisInPosition=>SR140_Vert_Servo_Ctrl_2.Axis_In_Pos , 
	bAxisError=>berror[1351] , 
	bAxisEnabled=>SR140_Vert_Servo_Ctrl_2.Axis_Enabled, 
	bAxisHomed=>SR140_Vert_Servo_Ctrl_2.Axis_reference  , 
	bSetPositionDone=> , 
	bHaltDone=> SR140_Vert_Servo_Ctrl_2.Axis_Halted, 
	bSTOPDone=> SR140_Vert_Servo_Ctrl_2.Axis_Stopped, 
	bHomeDone=> , 
	bDone=> , 
	bTorqueReached=>SR140_Vert_Servo_Ctrl_2.Trq_reached , 
	bsafe_to_move=>SR140_Vert_Servo_Ctrl_2.Safe_To_Move , 
	baxis_in_home_pos=>SR140_Vert_Servo_Ctrl_2.Axis_In_Home , 
	bABS_Pos_done=> , 
	Actual_position=> SR140_Vert_Servo_Ctrl_2.Actual_Position, 
	Actual_velocity=> SR140_Vert_Servo_Ctrl_1.Actual_Velocity, 
	Actual_Torque=>SR140_Vert_Servo_Ctrl_1.Actual_Torque );
	
		//Vertical Servo 3
	
	// Safe to Move
	
	IF CR140_Top_Wipe_Cyl_3.Position1	AND CR140_Horz_Cyl_3.Sensor2  AND CR140_Vert_Cyl_3.Position2 THEN //OR  SR140_HMI_Vert_Servo_MC3.actualPosition <=50)	THEN
		
		OP140_Servo3_Safety:=TRUE;
		ELSE
			OP140_Servo3_Safety:=FALSE;
		END_IF

SR140_Vert_Servo_3(
	bAxis1_Ref_Switch:= , 
	bInit:= , 
	bErrorReset:=OP140_HMI_Reset OR Servo_Reset , 
	bEnable:= Servo_Enable, 
	bMoveVelocity:= , 
	bHalt:= , 
	bManualMode:= OP140_ManualSelected, 
	fHomePos:= , 
	fOverride:= 100, 
	fTargetPosition:=SR140_Vert_Servo_Ctrl_3.Position , 
	fTargetVelocity:=SR140_Vert_Servo_Ctrl_3.Velocity , 
	fAcc:= , 
	fDec:= ,
	Servo_High_Limit:= SR140_Vert_Servo_Max_Lim,	
	Servo_Low_Limit:=SR140_Vert_Servo_Min_Lim,	 	
	WARNING_LIMIT:=1, 
	Safe_move_Conditions:=OP140_Servo3_Safety  , 
	Axis:= SR140_Vert_Servo_Axis_3,
	HME_WRITE_ADD:= 16#5015, 
	bHome:=SR140_Vert_Servo_Ctrl_3.Reference_Start, 
	bSetPosition:=SR140_Vert_Servo_Ctrl_3.BsetPos , 
	bMoveAbsolute:=SR140_Vert_Servo_Ctrl_3.ABSmove_Start , 
	bMoveRelative:=SR140_Vert_Servo_Ctrl_3.RELmove_Start , 
	bMoveTorque:=SR140_Vert_Servo_Ctrl_3.Torque_mode_Start , 
	stManualModeAxis:=SR140_HMI_Vert_Servo_MC3 , 
	bmove_home:=SR140_Vert_Servo_Ctrl_3.Axis_Home_Cmd , 
	sAxisState=>SR140_Vert_Servo_Ctrl_3.Axis_State , 
	bAxis_ready=>SR140_Vert_Servo_Ctrl_3.Axis_ready , 
	bAxisInPosition=>SR140_Vert_Servo_Ctrl_3.Axis_In_Pos , 
	bAxisError=>berror[1352] , 
	bAxisEnabled=>SR140_Vert_Servo_Ctrl_3.Axis_Enabled, 
	bAxisHomed=>SR140_Vert_Servo_Ctrl_3.Axis_reference  , 
	bSetPositionDone=> , 
	bHaltDone=> SR140_Vert_Servo_Ctrl_3.Axis_Halted, 
	bSTOPDone=> SR140_Vert_Servo_Ctrl_3.Axis_Stopped, 
	bHomeDone=> , 
	bDone=> , 
	bTorqueReached=>SR140_Vert_Servo_Ctrl_3.Trq_reached , 
	bsafe_to_move=>SR140_Vert_Servo_Ctrl_3.Safe_To_Move , 
	baxis_in_home_pos=>SR140_Vert_Servo_Ctrl_3.Axis_In_Home , 
	bABS_Pos_done=> , 
	Actual_position=> SR140_Vert_Servo_Ctrl_3.Actual_Position, 
	Actual_velocity=>SR140_Vert_Servo_Ctrl_3.Actual_Velocity , 
	Actual_Torque=>SR140_Vert_Servo_Ctrl_3.Actual_Torque );

IF OP140_ManualSelected THEN
SR140_HMI_Vert_Servo_MC1.targetVelocity:=5;
SR140_HMI_Vert_Servo_MC2.targetVelocity:=5;
SR140_HMI_Vert_Servo_MC3.targetVelocity:=5;
END_IF


]]></ST>
    </Implementation>
    <LineIds Name="OP140_Manual">
      <LineId Id="3" Count="750" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>